--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,10 @@
             <string name="btnSig">SIGUIENTE</string>
 
             <!--String para el boton de siguiente-->
-            <string name="btnFin">FNALIZAR</string>
+            <string name="btnFin">FINALIZAR</string>
+
+    <!--String para el boton de siguiente-->
+    <string name="btnSalir">SALIR</string>
 
 
 
@@ -38,7 +41,7 @@
     <string name="SURNAME">Apellido</string>
 
     <!--direccion de la pantalla inicial-->
-    <string name="dir1">Direccion</string>
+    <string name="dir1">Dirección</string>
 
     <!--telefono de la pantalla inicial-->
     <string name="telefono">Telefono</string>
@@ -80,7 +83,7 @@
     <string name="tlf">943 31 69 00</string>
 
     <!--String para el nombre de la calle-->
-    <string name="calle">Nos encontramos en berio Pasealekua 50, codigo postal 20018 Donostia</string>
+    <string name="calle">Nos encontramos en berio Pasealekua 50, codigo postal 20018 ,Donostia</string>
 
     <!--String para el contacto-->
     <string name="cont">CONTACTO</string>
@@ -96,37 +99,6 @@
     <!--String para el tamaño de la pizza-->
     <string name="tamaños">Escoge tu tamaño de pizza</string>
 
-    <!--String para el array de los tipos de pizza-->
-    <string-array name="SpinnerArray">
-        <item>Pizza Barbacoa</item>
-        <item>Pizza Carbonara</item>
-        <item>Pizza 4 Quesos</item>
-        <item>Pizza Vegetal</item>
-        <item>Pizza Tropical</item>
-    </string-array>
 
-    <!--String para el array de las masas de pizza-->
-    <string-array name="SpinnerMasas">
-        <item>Fina</item>
-        <item>Normal</item>
-    </string-array>
-
-    <!--String para el array de las masas de pizza-->
-    <string-array name="SpinnerTamaños">
-        <item>Individual</item>
-        <item>Mediana</item>
-        <item>Familiar</item>
-    </string-array>
-
-
-    <!--String para el array de las masas de pizza-->
-    <string-array name="SpinnerBebidas">
-        <item>Coca-Cola</item>
-        <item>Kas Limon</item>
-        <item>Agua</item>
-        <item>Cerveza</item>
-        <item>Nestea</item>
-        <item>RedBull</item>
-    </string-array>
 
 </resources>
